[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kilterbench"
version = "0.1.0"
authors = [{ name = "Ben Jude"}]
description = "Utility for finding benchmarks on the Kilter Board"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "pandas", "scipy", "matplolib"]

[project.scripts]
kilterbench = "kilterbench.__main__:main"

[project.urls]
Homepage = "https://github.com/bjude/kilterbench"
Issues = "https://github.com/bjude/kilterbench/issues"